# sprout

./: .gitignore  Cargo.toml  docker-compose.yml  justfile  pnpm-lock.yaml
.github/workflows/: ci.yml  sprig.yml
crates/git-credential-nostr/: Cargo.toml
crates/git-credential-nostr/src/: main.rs
crates/sprout-acp/src/: filter.rs  lib.rs  main.rs  pool.rs  queue.rs  relay.rs
crates/sprout-admin/src/: main.rs
crates/sprout-agent/: Cargo.toml
crates/sprout-agent/src/: llm.rs
crates/sprout-auth/src/: lib.rs  nip42.rs  nip98.rs
crates/sprout-cli/: Cargo.toml
crates/sprout-cli/src/: client.rs  lib.rs
crates/sprout-cli/src/commands/: channels.rs  dms.rs  follow_sets.rs  mod.rs  users.rs  workflows.rs
crates/sprout-core/src/: event.rs  filter.rs  kind.rs  lib.rs  verification.rs
crates/sprout-core/src/pairing/: session.rs
crates/sprout-db/src/: event.rs
crates/sprout-mcp/: Cargo.toml
crates/sprout-mcp/src/: lib.rs  relay_client.rs  server.rs  upload.rs
crates/sprout-media/src/: auth.rs
crates/sprout-pairing-cli/src/: main.rs
crates/sprout-proxy/src/: channel_map.rs  translate.rs  upstream.rs
crates/sprout-pubsub/src/: lib.rs
crates/sprout-relay/src/: nip11.rs  protocol.rs  subscription.rs  workflow_sink.rs
crates/sprout-relay/src/api/: bridge.rs
crates/sprout-relay/src/api/git/: transport.rs
crates/sprout-relay/src/audio/: handler.rs
crates/sprout-relay/src/handlers/: event.rs  ingest.rs  relay_admin.rs  side_effects.rs
crates/sprout-sdk/: Cargo.toml
crates/sprout-sdk/src/: builders.rs  lib.rs  nip_oa.rs  upload.rs
crates/sprout-search/src/: index.rs  lib.rs
crates/sprout-test-client/src/: lib.rs
crates/sprout-test-client/tests/: e2e_follow_set.rs  e2e_long_form.rs  e2e_mcp.rs  e2e_media.rs  e2e_media_extended.rs  e2e_media_video.rs  e2e_nostr_interop.rs  e2e_relay.rs  e2e_rest_api.rs  e2e_tokens.rs  e2e_user_status.rs  e2e_workflows.rs
crates/sprout-workflow/src/: lib.rs
desktop/: .gitignore  README.md  package.json  playwright.config.ts
desktop/scripts/: check-file-sizes.mjs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.light.conf.json
desktop/src-tauri/capabilities/: default.json  huddle.json
desktop/src-tauri/src/: app_state.rs  events.rs  huddle_stub.rs  lib.rs  nostr_convert.rs
desktop/src-tauri/src/commands/: agent_models.rs  agents.rs  mod.rs
desktop/src-tauri/src/commands/agent_provider_settings/: commands.rs  mod.rs  spawn.rs  storage.rs  tests.rs
desktop/src-tauri/src/huddle/: models.rs  pocket.rs  tts.rs
desktop/src-tauri/src/managed_agents/: discovery.rs  nest.rs  runtime.rs
desktop/src/app/: AppShell.tsx  AppShellContext.tsx
desktop/src/features/agents/lib/: resolveAcpProviderId.test.mjs  resolveAcpProviderId.ts
desktop/src/features/agents/ui/: CreateAgentDialog.tsx  CreateAgentDialogSections.tsx  EditAgentDialog.tsx  ManagedAgentRow.tsx
desktop/src/features/channels/ui/: ChannelScreen.tsx
desktop/src/features/forum/ui/: ForumComposer.tsx  ForumComposerCompactLayout.tsx
desktop/src/features/home/lib/: inbox.ts
desktop/src/features/home/ui/: HomeView.tsx  InboxDetailPane.tsx
desktop/src/features/messages/ui/: MessageRow.tsx
desktop/src/features/profile/ui/: UserProfilePopover.tsx
desktop/src/features/pulse/: hooks.ts
desktop/src/features/pulse/ui/: NoteCard.tsx  PulseView.tsx
desktop/src/features/settings/hooks/: useAgentProviderSettings.ts
desktop/src/features/settings/lib/: agentProviderFormState.ts  agentProviderSettingsApi.ts  applyProviderSwitch.test.mjs  detectProvider.test.mjs  detectProvider.ts  providerCatalog.ts
desktop/src/features/settings/ui/: AgentProviderAdvancedFields.tsx  AgentProviderBanners.tsx  AgentProviderClearDialog.tsx  AgentProviderSettingsCard.tsx  SettingsPanels.tsx
desktop/src/shared/api/: social.ts
desktop/src/testing/: e2eBridge.ts
desktop/tests/e2e/: settings-agent-provider.spec.ts
desktop/tests/helpers/: bridge.ts  settings.ts
docs/: MESH_LLM_INTEGRATION.md  MESH_LLM_INTEGRATION_DEEP.md  MESH_LLM_INTEGRATION_PRIVATE.md
docs/nips/: NIP-51.md
examples/countdown-bot/src/: main.rs
mobile/: pubspec.yaml
mobile/android/: settings.gradle.kts
web/: package.json
