[package]
name = "sprout"
version = "0.1.0"
description = "Sprout desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sprout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dependencies]
atomic-write-file = "0.3"
dirs = "6"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-window-state = "2"
tauri-plugin-websocket = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
infer = "0.19"
hex = "0.4"
tokio = { version = "1", features = ["fs", "sync", "rt", "macros", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nostr = { version = "0.37", features = ["nip44"] }
nostr-compat = { package = "nostr", version = "0.36" }
zeroize = "1"
reqwest = { version = "0.13", features = ["json", "query", "stream"] }
url = "2"
sprout-core = { path = "../../crates/sprout-core" }
sprout-persona = { path = "../../crates/sprout-persona" }
sprout-sdk = { path = "../../crates/sprout-sdk" }
base64 = "0.22"
sha2 = "0.11"
tar = "0.4"
bzip2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-notification = "2.3.3"
uuid = { version = "1", features = ["v4"] }
png = "0.18"
zip = "2"
regex = "1"
axum = "0.8"
tempfile = "3"

# Huddle-only dependencies. Pulled in only when the `huddle` feature is on.
opus = { version = "0.3", optional = true }
sherpa-onnx = { version = "1.12", optional = true }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "tls-native", "copy-dylibs", "api-23", "coreml"], optional = true }
ndarray = { version = "0.17", features = ["rayon"], optional = true }
rodio = { version = "0.22", optional = true }
earshot = { version = "1.0", optional = true }
rubato = { version = "2.0", optional = true }
audioadapter-buffers = { version = "3.0", optional = true }
tauri-plugin-global-shortcut = { version = "2", optional = true }

[features]
default = ["huddle"]
# Voice/huddle stack: TTS (Kokoro via ort/ONNX Runtime), STT (Parakeet via
# sherpa-onnx), audio I/O (rodio/cpal), VAD (earshot), resampling (rubato),
# Opus codec, and the global-shortcut plugin used for push-to-talk.
# Disabling drops all native model deps from the build — see desktop-light.
huddle = [
    "dep:opus",
    "dep:sherpa-onnx",
    "dep:ort",
    "dep:ndarray",
    "dep:rodio",
    "dep:earshot",
    "dep:rubato",
    "dep:audioadapter-buffers",
    "dep:tauri-plugin-global-shortcut",
]

[dev-dependencies]
